fix: add evaluator manager scripts